kubernetes/apps/observability/glance/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app glance
  namespace: observability
  labels:
    app: glance
  annotations:
    configmap.reloader.stakater.com/reload: "glance-configmap"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
        - name: glance
          image: docker.io/glanceapp/glance:latest
          ports:
            - name: web
              containerPort: 8080
          imagePullPolicy: Always
          resources:
            limits:
              memory: 256Mi
              cpu: 100m
            requests:
              cpu: 10m
              memory: 128Mi
          volumeMounts:
            - mountPath: /app/config/glance.yml
              name: config
              readOnly: true
              subPath: glance.yml
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - configMap:
            defaultMode: 420
            name: glance-configmap
          name: config
