kubernetes/apps/observability/glance/app/service.yaml
---
# Source: glance/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app glance
  namespace: observability
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8080
      targetPort: web
  selector:
    app: glance
