kubernetes/apps/observability/glance/app/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.${SECRET_EXTERNAL_DOMAIN}`)
      kind: Rule
      services:
        - name: glance
          port: 8080
  tls:
    secretName: glance-tls
