kubernetes/apps/observability/glance/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app glance-ingress
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: observability-authentik-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: home.${SECRET_EXTERNAL_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: glance
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - home.${SECRET_EXTERNAL_DOMAIN}
    secretName: glance-tls
